# RagCode

./: .env.example  .gitignore  pyproject.toml
app/: __init__.py  cli.py  settings.py
app/coding/: __init__.py  agent.py  backend.py  loop.py  result.py
app/context/: __init__.py  package.py
app/db/: schema.py
app/graph/: __init__.py  state.py  workflow.py
app/memory/: __init__.py  compact.py  state.py  store.py
app/models/: __init__.py  chat_model.py  embeddings.py  metadata_extractor.py
app/rag/: __init__.py  evaluation.py  human_review.py  ingest.py  markdown_parser.py  metadata_enrich.py  retriever.py  schemas.py  token_counter.py
app/routing/: __init__.py  model_skill_selector.py  skill_router.py  skill_selection.py
app/tools/: __init__.py  bash_tool.py  file_tools.py  git_tool.py  path_utils.py  registry.py  (+3 more)
config/: default.yaml
tests/: test_agent_state.py  test_alembic_files.py  test_chat_model_adapter.py  test_cli.py  test_coding_agent.py  test_coding_backend.py  test_coding_loop.py  test_coding_result.py  test_command_tools.py  test_compact.py  test_context_package.py  test_db_schema.py  test_editor_tools.py  test_embeddings.py  test_file_search_tools.py  test_graph_workflow.py  test_human_review.py  test_ingest_records.py  test_markdown_parser.py  test_memory_store.py  test_metadata_enrich.py  test_metadata_extractor.py  test_rag_evaluation.py  test_retriever.py  test_retriever_trace.py  test_settings.py  test_skill_router.py  test_skill_selection.py  test_skill_selector.py  test_skill_tool.py  test_tool_registry.py  test_tool_schemas.py
(+3 files in other folders)
